--- a/ClientSide/pm-client/package.json
+++ b/ClientSide/pm-client/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.4.2",
     "vue": "^3.2.25",
     "vue-router": "4",
     "vuex": "^4.0.0-0"
