--- a/ClientSide/pm-client/package.json
+++ b/ClientSide/pm-client/package.json
@@ -2,23 +2,34 @@
   "name": "pm-client",
   "version": "0.0.0",
   "scripts": {
+    "serve": "vite preview",
     "build": "vite build",
     "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
     "@headlessui/vue": "^1.4.2",
+    "@mdi/font": "5.9.55",
+    "roboto-fontface": "*",
     "vue": "^3.2.25",
     "vue-router": "4",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/cli-plugin-babel": "5.0.0-beta.7",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "5.0.0-beta.7",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.3",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
+    "sass": "^1.38.0",
+    "sass-loader": "^10.0.0",
     "tailwindcss": "^3.0.7",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vue-cli-plugin-vuetify": "~2.4.5",
+    "vuetify-loader": "^2.0.0-alpha.0"
   }
 }
