--- a/ClientSide/pm-client/package.json
+++ b/ClientSide/pm-client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.4.2",
+    "@heroicons/vue": "^1.0.5",
     "@mdi/font": "5.9.55",
     "roboto-fontface": "*",
     "vue": "^3.2.25",
