--- a/ClientSide/pm-client/package.json
+++ b/ClientSide/pm-client/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.25",
     "vue-router": "4",
     "vuex": "^4.0.0-0",
+    "vuex-persistedstate": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
